# Nids2

./: Cargo.toml
data/: nids.sav
images/: spr_maggie_r_0.xcf
src/: game.rs  lib.rs  main.rs  naomi.rs  object.rs  save.rs  util.rs
