[package]
name = "nids2"
version = "0.1.0"
edition = "2018"
default-run = "nids2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
raylib = { version = "3.7" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
